Bug 378614 - Missing Font in AppImage on Kubuntu
Summary: Missing Font in AppImage on Kubuntu
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-10 12:17 UTC by christian tacke
Modified: 2018-02-28 13:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments
Screenshot of missing font in code browser (33.91 KB, image/png)
2017-08-01 07:26 UTC, christian tacke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description christian tacke 2017-04-10 12:17:18 UTC
The font used in the "Find Uses" Window is not available and therefore I only get squares...
Comment 1 christian tacke 2017-08-01 07:26:30 UTC
Created attachment 107002 [details]
Screenshot of missing font in code browser

Kdevelop 5.1.0
Comment 2 Kevin Funk 2017-08-01 08:10:35 UTC
Git commit 12f5de1c9706b7b5b49528b57acfe4a350110839 by Kevin Funk.
Committed on 01/08/2017 at 08:07.
Pushed by kfunk into branch '5.1'.

UsesWidget: Use <code> to achieve monospace font

"Monospace" is not a font family, it is a style (it's a predefined alias
of fontconfig, so it is unavailable if Qt is configured not to use fontconfig).

Also see:
  http://lists.qt-project.org/pipermail/qt-interest-old/2011-October/036282.html
FIXED-IN: 5.1.2

M  +2    -2    language/duchain/navigation/useswidget.cpp

https://commits.kde.org/kdevplatform/12f5de1c9706b7b5b49528b57acfe4a350110839
Comment 3 Michael Thénault 2018-02-28 13:31:33 UTC
I have the exact same issue with the git appimage from approx. 2 weeks ago (5.2.1).