UsesWidget: Use <code> to achieve monospace font

"Monospace" is not a font family, it is a style (it's a predefined alias
of fontconfig, so it is unavailable if Qt is configured not to use fontconfig).

Also see:
  http://lists.qt-project.org/pipermail/qt-interest-old/2011-October/036282.html

BUG: 378614
FIXED-IN: 5.1.2